<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="11dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/textViewSubTitleValue"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextGenreFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSubTitle"
        android:hint="@string/genre_filter_hint"
        android:inputType="textFilter"
        android:singleLine="true"
        android:paddingTop="5dp"
        android:textSize="14sp" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/btnSearchEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/eventListView"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:paddingTop="5dp"
        android:contentDescription="@string/button_search"   
        android:src="@android:drawable/ic_menu_search" />

    
    <ListView
        android:id="@+id/eventListView"
        android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
        android:layout_below="@+id/editTextGenreFilter" >
    </ListView>
</RelativeLayout>
